tests/bad/trailing.js
// This otherwise perfectly valid string will error if
// there is a whitespace after \
var str = "Hello \
World";